--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "Atlas-hypr"]
+[submodule "manifests/Atlas-hypr"]
 	path = manifests/Atlas-hypr
 	url = https://github.com/EE-Atlas/Atlas-hypr
+	branch = main
